clusters/talos-cluster/sprite/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sprite-service
  namespace: sprite
spec:
  selector:
    app: sprite
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
